# mkbot-nlu

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
mkbot_nlu/: nlu.py  paths.py  utils.py
tests/: conftest.py  test_nlu.py
