[tool.poetry]
name = "mkbot-nlu"
version = "0.1.0"
description = ""
authors = ["Mycroft <thkang0629@gmail.com>"]
readme = "README.md"
packages = [{include = "mkbot_nlu"}]

[tool.poetry.dependencies]
python = "3.10.*"
python-mecab-ko = "1.3.3"
requests = "2.28.2"
rasa = {git = "https://github.com/RasaHQ/rasa.git", rev = "3.4.2"}
spacy = "3.4.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "6.20.2"
pylint = "2.16.1"
black = "22.10"
ko-wiki-model = {url = "https://github.com/mgylabs/spacy_ko_wiki_model/releases/download/v0.0.0/ko_wiki_model-0.0.0.tar.gz"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
